# Routes/AttendanceRoutes.js
@@ -8,16 +8,19 @@ const app = express();
 app.use(bodyParser.json());
 
 app.get('/api/attendances', (req, res) => {
+      // #swagger.tags = ['Attendances']
     return res.json(Attendances);
 });
 
 app.get('/api/attendances/manager/:id', (req, res) => {
+    // #swagger.tags = ['Attendances']
     return res.json(Attendances);
 });
 
 
 //if you pass below api in date then it filtered by date
 app.get('/api/attendances/employee/:id', (req, res) => {
+    // #swagger.tags = ['Attendances']
     return res.json(AttendanceEmployee);
 });
 
